# Railcross-watch

./: .env.example  .gitignore  Makefile  README.md  package.json  turbo.json
.github/workflows/: api-ci.yml  web-ci.yml  worker-ci.yml
apps/api/: .env.example  package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/prisma/migrations/20260402103134_init/: migration.sql
apps/api/src/: app.controller.ts  app.module.ts  main.ts
apps/api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
apps/api/src/comments/: comments.controller.ts  comments.service.ts
apps/api/src/logs/: logs.controller.ts  logs.service.ts
apps/api/src/notifications/: notifications.controller.ts  notifications.service.ts
apps/api/src/prisma/: prisma.service.ts
apps/api/src/redis/: redis.service.ts
apps/api/src/reports/: reports.controller.ts  reports.service.ts
apps/api/src/search/: search.controller.ts  search.service.ts
apps/api/src/training-assets/: training-assets.controller.ts  training-assets.module.ts  training-assets.service.ts  training-internal.controller.ts
apps/api/src/videos/: internal.controller.ts  internal.guard.ts  videos.controller.ts  videos.module.ts  videos.service.ts
apps/web/: .env.local.example  middleware.ts  next.config.js  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/src/components/: OnboardingTour.tsx  ThemeProvider.tsx
apps/worker-ai/: .env.example  pyproject.toml
apps/worker-ai/src/: config.py  downloader.py  trainer.py
apps/worker-ai/src/analyzer/: context.py  detector.py  models.py  pipeline.py  safety.py  tracker.py
apps/worker-rails/: .env.example  pyproject.toml
apps/worker-rails/src/: api_client.py  config.py  downloader.py  extractor.py  main.py  trainer.py
apps/worker-rails/src/analyzer/: pipeline.py  safety.py  tracker.py
infra/compose/: docker-compose.dev.yml
infra/docker/: api.Dockerfile  web.Dockerfile  worker.Dockerfile
(+36 files in other folders)
