[project]
name = "worker-rails"
version = "0.1.0"
description = "Silnik detekcji wykroczeń na przejazdach kolejowych (YOLO26 + OpenCV)"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.2",
    "opencv-python-headless>=4.9",
    "azure-storage-blob>=12.19",
    "azure-storage-queue>=12.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "loguru>=0.7",
    "yt-dlp>=2024.3",
    "redis>=5.0",
    "httpx>=0.27",
    "supervision>=0.20",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
